Refactor: rename user settings handler funcs
